src/objects/MobileDevice__c.object
<CustomObject>
    <description>this is the template for the devices</description>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XBezel__c</fullName>
        <label>XBezel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XFrame__c</fullName>
        <label>XFrame</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YBezel__c</fullName>
        <label>YBezel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YFrame__c</fullName>
        <label>YFrame</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attachmentId__c</fullName>
        <label>attachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <label>height</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>operatingSystem__c</fullName>
        <label>operatingSystem</label>
        <picklist>
            <picklistValues>
                <fullName>IOS 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROID 5.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>width__c</fullName>
        <label>width</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MobileDevice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>operatingSystem__c</columns>
        <columns>height__c</columns>
        <columns>width__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MobileDevice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MobileDevices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>